--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-query": "^3.34.19",
+    "react-router-dom": "^6.3.0",
+    "redux": "^4.1.2",
+    "sass": "^1.50.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react": "^18.0.2",
+    "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.0.7",
+    "jest": "^27.5.1",
     "typescript": "^4.5.4",
     "vite": "^2.9.0"
   }
