--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.30.0",
     "react-query": "^3.34.19",
     "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
